--- a/Image_Recognition/ffNN_example.ipynb
+++ b/Image_Recognition/ffNN_example.ipynb
@@ -16,7 +16,7 @@
     "---\n",
     "\n",
     "**Group:**\n",
-    "- Alumno 1:\n",
+    "- Alumno 1: San Millan Rodrigues, Nadine (n.srodrigues@alumnos.upm.es)\n",
     "- Alumno 2: Sukhorukova, Anastasia (anastasia.s@alumnos.upm.es)\n",
     "- Alumno 3: Reyes Castro, Didier Yamil (didier.reyes.castro@alumnos.upm.es)\n",
     "\n",
