--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -625,7 +625,7 @@
     "  - Batch: 16\n",
     "- Model 2: FOCUS ON NETWORK ARCHITECTURE\n",
     "  - Test 1: 3 Conv2D layers (32, 64, 128 filters; 3x3 kernel) followed by a single Softmax Dense layer. -> RESULTS: Even less training time (1h) but slightly worse validation accuracy. Huge Overfitting (0.99 train acc vs 0.60 val acc).\n",
-    "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer.\n"
+    "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer. --> RESULTS: Highest validation accuracy (0.64) so far, but still overfitting (0.93 train acc vs 0.64 val acc).\n"
    ]
   },
   {
