Added a dense layer in classification

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -625,7 +625,8 @@
     "  - Batch: 16\n",
     "- Model 2: FOCUS ON NETWORK ARCHITECTURE\n",
     "  - Test 1: 3 Conv2D layers (32, 64, 128 filters; 3x3 kernel) followed by a single Softmax Dense layer. -> RESULTS: Even less training time (1h) but slightly worse validation accuracy. Huge Overfitting (0.99 train acc vs 0.60 val acc).\n",
-    "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer. --> RESULTS: Highest validation accuracy (0.64) so far, but still overfitting (0.93 train acc vs 0.64 val acc).\n"
+    "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer. --> RESULTS: Highest validation accuracy (0.64) so far, but still overfitting (0.93 train acc vs 0.64 val acc).\n",
+    "  - Test 3: Lets now try to add more layers in the classifier -> This is a typical CNN architecture like AlexNet.\n"
    ]
   },
   {
@@ -838,6 +839,8 @@
     "\n",
     "    # --- Classification ---\n",
     "    Flatten(),\n",
+    "\n",
+    "    Dense(128, activation='relu'), # Fully connected layer with 128 units\n",
     "\n",
     "    Dense(NUM_CATEGORIES, activation='softmax') # Output layer with softmax activation\n",
     "])\n",
@@ -1329,7 +1332,7 @@
     "# Show the plots\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
-    "plt.savefig('training_plots.png')\n",
+    "fig.savefig('training_plots.png')\n",
     "\n",
     "# --- Your code for printing the best model can go here ---\n",
     "best_idx = int(np.argmax(h1.history['val_accuracy']))\n",
