Added BatchNorm phase

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -177,7 +177,7 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import Input\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Activation, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D\n",
     "from tensorflow.keras.optimizers import Adam, AdamW\n",
     "from tensorflow.keras.callbacks import TerminateOnNaN, EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n"
    ]
@@ -626,7 +626,10 @@
     "- Model 2: FOCUS ON NETWORK ARCHITECTURE\n",
     "  - Test 1: 3 Conv2D layers (32, 64, 128 filters; 3x3 kernel) followed by a single Softmax Dense layer. -> RESULTS: Even less training time (1h) but slightly worse validation accuracy. Huge Overfitting (0.99 train acc vs 0.60 val acc).\n",
     "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer. --> RESULTS: Highest validation accuracy (0.64) so far, but still overfitting (0.93 train acc vs 0.64 val acc).\n",
-    "  - Test 3: Lets now try to add more layers in the classifier -> This is a typical CNN architecture like AlexNet.\n"
+    "  - Test 3: Lets now try to add more layers in the classifier -> This is a typical CNN architecture like AlexNet --> Results: Slight increase in accuracy (0.6448) but still a huge overftting.\n",
+    "- Model 3: FOCUS ON REDUCING OVERFITTING\n",
+    "  - Data Augmentation Tests!\n",
+    "  - Test 2: Adding BatchNormalisation layers on feature extraction part. --> RESULTS: \n"
    ]
   },
   {
@@ -828,13 +831,19 @@
     "\n",
     "    # --- Feature extraction ---\n",
     "\n",
-    "    Conv2D(32, (3, 3), activation='relu'), # Convolution with 32 filters and 3x3 kernel\n",
+    "    Conv2D(32, (3, 3)), # Convolution with 32 filters and 3x3 kernel\n",
+    "    BatchNormalization(),\n",
+    "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
     "\n",
-    "    Conv2D(64, (3, 3), activation='relu'), # Convolution with 64 filters and 3x3 kernel\n",
+    "    Conv2D(64, (3, 3)), # Convolution with 64 filters and 3x3 kernel\n",
+    "    BatchNormalization(),\n",
+    "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
     "\n",
-    "    Conv2D(128, (3, 3), activation='relu'), # Convolution with 128 filters and 3x3 kernel\n",
+    "    Conv2D(128, (3, 3)), # Convolution with 128 filters and 3x3 kernel\n",
+    "    BatchNormalization(),\n",
+    "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
     "\n",
     "    # --- Classification ---\n",
