Added more regularisation and overfitting techniques

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -628,8 +628,8 @@
     "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer. --> RESULTS: Highest validation accuracy (0.64) so far, but still overfitting (0.93 train acc vs 0.64 val acc).\n",
     "  - Test 3: Lets now try to add more layers in the classifier -> This is a typical CNN architecture like AlexNet --> Results: Slight increase in accuracy (0.6448) but still a huge overftting.\n",
     "- Model 3: FOCUS ON REDUCING OVERFITTING\n",
-    "  - Data Augmentation Tests!\n",
-    "  - Test 2: Adding BatchNormalisation layers on feature extraction part. --> RESULTS: \n"
+    "  - Test 1: Adding BatchNormalisation layers to Feature extraction phase. --> RESULTS: Validation accuracy has decreased to 0.6 again but now it is overfitting less.\n",
+    "  - Test 2: Addind BatchNorm to Classification phase and adding Dropout layers. --> RESULTS: \n"
    ]
   },
   {
@@ -835,21 +835,27 @@
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
+    "    Dropout(0.3),\n",
     "\n",
     "    Conv2D(64, (3, 3)), # Convolution with 64 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
-    "\n",
+    "    Dropout(0.3),\n",
+    "    \n",
     "    Conv2D(128, (3, 3)), # Convolution with 128 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
-    "\n",
+    "    Dropout(0.3),\n",
+    "    \n",
     "    # --- Classification ---\n",
     "    Flatten(),\n",
     "\n",
-    "    Dense(128, activation='relu'), # Fully connected layer with 128 units\n",
+    "    Dense(128), # Fully connected layer with 128 units\n",
+    "    BatchNormalization(),\n",
+    "    Activation('relu'),\n",
+    "    Dropout(0.3),\n",
     "\n",
     "    Dense(NUM_CATEGORIES, activation='softmax') # Output layer with softmax activation\n",
     "])\n",
