Added results on last regularisation model & next steps

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -629,7 +629,13 @@
     "  - Test 3: Lets now try to add more layers in the classifier -> This is a typical CNN architecture like AlexNet --> Results: Slight increase in accuracy (0.6448) but still a huge overftting.\n",
     "- Model 3: FOCUS ON REDUCING OVERFITTING\n",
     "  - Test 1: Adding BatchNormalisation layers to Feature extraction phase. --> RESULTS: Validation accuracy has decreased to 0.6 again but now it is overfitting less.\n",
-    "  - Test 2: Addind BatchNorm to Classification phase and adding Dropout layers. --> RESULTS: \n"
+    "  - Test 2: Addind BatchNorm to Classification phase and adding Dropout layers. --> RESULTS: We have greatly reduced overfitting! (0.8 train vs 0.6 val) but there is room for improvement. We have also increased val accuracy to 0.67 (NEW HIGHEST).\n",
+    "\n",
+    "---\n",
+    "### Next Steps:\n",
+    "1. Further decrease overfitting by **DATA AUGMENTATION**. In Keras we can use `ImageDataGenerator` OR RandomFlip(\"horizontal\"), RandomRotation(0.1), RandomZoom(0.1), etc.\n",
+    "2. **Other decreases in overfitting**: Increase Dropout rate in Dense layer (0.5 f.i.), L2 Regularization with AdamW optimiser (weight decay).\n",
+    "3. **Other tuning**: Experiment with Conv2D filter number, kernel size, strides. Activation functions (LeakyReLU). More or Less Conv2D layers, More or Less Dense layers. Include FocalLoss to address class imbalance.\n"
    ]
   },
   {
