Added new model that generalises better!

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -177,7 +177,7 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import Input\n",
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Activation, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Activation, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D, RandomFlip, RandomRotation, RandomZoom\n",
     "from tensorflow.keras.optimizers import Adam, AdamW\n",
     "from tensorflow.keras.callbacks import TerminateOnNaN, EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n"
    ]
@@ -630,12 +630,18 @@
     "- Model 3: FOCUS ON REDUCING OVERFITTING\n",
     "  - Test 1: Adding BatchNormalisation layers to Feature extraction phase. --> RESULTS: Validation accuracy has decreased to 0.6 again but now it is overfitting less.\n",
     "  - Test 2: Addind BatchNorm to Classification phase and adding Dropout layers. --> RESULTS: We have greatly reduced overfitting! (0.8 train vs 0.6 val) but there is room for improvement. We have also increased val accuracy to 0.67 (NEW HIGHEST).\n",
+    "  - Test 3: Adding DataAugmentation and L2 Regularisation with AdamW optimiser to reduce the variance. --> RESULTS: WE HAVE COMPLETELY REDUCED OVERFITTING (look at loss graph) but val accuracy has dropped to 0.6.\n",
+    "- Model 4: FOCUS ON INCREASING ACCURACY\n",
+    "  - Train for longer and increase patience in EarlyStopping?\n",
+    "  - Increase model capacity?\n",
+    "  - Introduce FocalLoss?\n",
+    "  - Reduce regularisation?\n",
+    "  - \"Play\" with kernel sizes, filter numbers, padding, strides, ...\n",
     "\n",
     "---\n",
     "### Next Steps:\n",
-    "1. Further decrease overfitting by **DATA AUGMENTATION**. In Keras we can use `ImageDataGenerator` OR RandomFlip(\"horizontal\"), RandomRotation(0.1), RandomZoom(0.1), etc.\n",
-    "2. **Other decreases in overfitting**: Increase Dropout rate in Dense layer (0.5 f.i.), L2 Regularization with AdamW optimiser (weight decay).\n",
-    "3. **Other tuning**: Experiment with Conv2D filter number, kernel size, strides. Activation functions (LeakyReLU). More or Less Conv2D layers, More or Less Dense layers. Include FocalLoss to address class imbalance.\n"
+    "1. **Other decreases in overfitting**: Increase Dropout rate in Dense layer (0.5 f.i.) and perhaps remove some from Conv2D layers or decrease them.\n",
+    "2. **Other tuning**: Experiment with Conv2D filter number, kernel size, strides. Activation functions (LeakyReLU). More or Less Conv2D layers, More or Less Dense layers. Include FocalLoss to address class imbalance.\n"
    ]
   },
   {
@@ -875,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4086028a",
    "metadata": {
     "execution": {
@@ -896,7 +902,7 @@
    "outputs": [],
    "source": [
     "# Callbacks\n",
-    "MODEL_NAME = 'ffNN_model.keras'\n",
+    "MODEL_NAME = 'CNN_model.keras'\n",
     "\n",
     "model_checkpoint = ModelCheckpoint(MODEL_NAME, monitor='val_accuracy', verbose=1, save_best_only=True)\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_accuracy', factor=0.1, patience=10, verbose=1)\n",
