Forgot to add actual changes...

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -839,8 +839,15 @@
     "\n",
     "model = Sequential([\n",
     "    Input(shape=(224, 224, 3)), # 224x224 images with 3 channels (RGB)\n",
-    "    Rescaling(1./255), # Rescale pixel values to [0, 1]\n",
+    "    \n",
+    "    # --- Data Augmentation Layers ---\n",
+    "    RandomFlip(\"horizontal\"),\n",
+    "    RandomRotation(0.1),  # Randomly rotate by up to 10% (36 degrees)\n",
+    "    RandomZoom(0.1),      # Randomly zoom by up to 10%\n",
+    "    # --------------------------------\n",
     "\n",
+    "    Rescaling(1./255), # Rescale pixel values to [0, 1]\n",
+    "    \n",
     "    # --- Feature extraction ---\n",
     "\n",
     "    Conv2D(32, (3, 3)), # Convolution with 32 filters and 3x3 kernel\n",
@@ -875,7 +882,7 @@
     "model.summary()\n",
     "\n",
     "\n",
-    "opt =  Adam(learning_rate=1e-4)\n",
+    "opt =  AdamW(learning_rate=1e-4, weight_decay=1e-5)\n",
     "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
    ]
   },
