--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -632,11 +632,11 @@
     "  - Test 2: Addind BatchNorm to Classification phase and adding Dropout layers. --> RESULTS: We have greatly reduced overfitting! (0.8 train vs 0.6 val) but there is room for improvement. We have also increased val accuracy to 0.67 (NEW HIGHEST).\n",
     "  - Test 3: Adding DataAugmentation and L2 Regularisation with AdamW optimiser to reduce the variance. --> RESULTS: WE HAVE COMPLETELY REDUCED OVERFITTING (look at loss graph) but val accuracy has dropped to 0.6.\n",
     "- Model 4: FOCUS ON INCREASING ACCURACY\n",
-    "  - Train for longer and increase patience in EarlyStopping?\n",
-    "  - Increase model capacity?\n",
+    "  - Test 1: Train for longer (50 epochs) and increase patience in EarlyStopping (10 to 40) --> RESULTS: val accuracy increased to 0.693 (NEW HIGHEST).\n",
+    "  - Test 2: Adding padding to Conv2D layers to preserve spatial dimensions. --> RESULTS: \n",
     "  - Introduce FocalLoss?\n",
     "  - Reduce regularisation?\n",
-    "  - \"Play\" with kernel sizes, filter numbers, padding, strides, ...\n",
+    "  - \"Play\" with kernel sizes (generally, its simply 3x3), filter numbers, strides, ...\n",
     "\n",
     "---\n",
     "### Next Steps:\n",
