--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -633,15 +633,16 @@
     "  - Test 3: Adding DataAugmentation and L2 Regularisation with AdamW optimiser to reduce the variance. --> RESULTS: WE HAVE COMPLETELY REDUCED OVERFITTING (look at loss graph) but val accuracy has dropped to 0.6.\n",
     "- Model 4: FOCUS ON INCREASING ACCURACY\n",
     "  - Test 1: Train for longer (50 epochs) and increase patience in EarlyStopping (10 to 40) --> RESULTS: val accuracy increased to 0.693 (NEW HIGHEST).\n",
-    "  - Test 2: Adding padding to Conv2D layers to preserve spatial dimensions. --> RESULTS: \n",
+    "  - Test 2: Adding padding to Conv2D layers to preserve spatial dimensions. --> RESULTS: val accuracy decreased a bit to 0.6928 but still good. Increassed a bit Recall and Precision.\n",
+    "  - Test 3: Increasing the number of filters in Conv2D layers (64, 128, 256) --> RESULTS: \n",
     "  - Introduce FocalLoss?\n",
     "  - Reduce regularisation?\n",
-    "  - \"Play\" with kernel sizes (generally, its simply 3x3), filter numbers, strides, ...\n",
     "\n",
     "---\n",
     "### Next Steps:\n",
-    "1. **Other decreases in overfitting**: Increase Dropout rate in Dense layer (0.5 f.i.) and perhaps remove some from Conv2D layers or decrease them.\n",
-    "2. **Other tuning**: Experiment with Conv2D filter number, kernel size, strides. Activation functions (LeakyReLU). More or Less Conv2D layers, More or Less Dense layers. Include FocalLoss to address class imbalance.\n"
+    "1. **If overfitting**: Increase Dropout rate in Dense layer (0.5 f.i.) and perhaps remove some from Conv2D layers or decrease them.\n",
+    "2. **If improving accuracy**: Experiment with Conv2D filter number and strides. Increase model capacity (more filters, more conv2d layers, more dense layers)\n",
+    "3. **Other tuning**: Activation functions like LeakyReLU. Include FocalLoss to address class imbalance.\n"
    ]
   },
   {
@@ -850,19 +851,19 @@
     "    \n",
     "    # --- Feature extraction ---\n",
     "\n",
-    "    Conv2D(32, (3, 3)), # Convolution with 32 filters and 3x3 kernel\n",
+    "    Conv2D(32, (3, 3), padding='same'), # Convolution with 32 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
     "    Dropout(0.3),\n",
     "\n",
-    "    Conv2D(64, (3, 3)), # Convolution with 64 filters and 3x3 kernel\n",
+    "    Conv2D(64, (3, 3), padding='same'), # Convolution with 64 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
     "    Dropout(0.3),\n",
     "    \n",
-    "    Conv2D(128, (3, 3)), # Convolution with 128 filters and 3x3 kernel\n",
+    "    Conv2D(128, (3, 3), padding='same'), # Convolution with 128 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
@@ -913,7 +914,7 @@
     "\n",
     "model_checkpoint = ModelCheckpoint(MODEL_NAME, monitor='val_accuracy', verbose=1, save_best_only=True)\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_accuracy', factor=0.1, patience=10, verbose=1)\n",
-    "early_stop = EarlyStopping(monitor='val_accuracy', patience=20, verbose=1)\n",
+    "early_stop = EarlyStopping(monitor='val_accuracy', patience=40, verbose=1)\n",
     "terminate = TerminateOnNaN()\n",
     "callbacks = [model_checkpoint, reduce_lr, early_stop, terminate]"
    ]
@@ -1298,7 +1299,7 @@
    "source": [
     "print('Training model...')\n",
     "\n",
-    "EPOCHS = 20\n",
+    "EPOCHS = 50\n",
     "train_steps = math.ceil(len(objs_train)/BATCH_SIZE)\n",
     "valid_steps = math.ceil(len(objs_valid)/BATCH_SIZE)\n",
     "\n",
