--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -634,7 +634,8 @@
     "- Model 4: FOCUS ON INCREASING ACCURACY\n",
     "  - Test 1: Train for longer (50 epochs) and increase patience in EarlyStopping (10 to 40) --> RESULTS: val accuracy increased to 0.693 (NEW HIGHEST).\n",
     "  - Test 2: Adding padding to Conv2D layers to preserve spatial dimensions. --> RESULTS: val accuracy decreased a bit to 0.6928 but still good. Increassed a bit Recall and Precision.\n",
-    "  - Test 3: Increasing the number of filters in Conv2D layers (64, 128, 256) --> RESULTS: \n",
+    "  - Test 3: Increasing the number of filters in Conv2D layers (64, 128, 256) --> RESULTS: val accuracy increased again to 0.69973 (NEW HIGHEST). Increased Precision, reduced Recall.\n",
+    "  - Test 4: Adding a new dense layer in the classifier with 256 neurons --> RESULTS: ...\n",
     "  - Introduce FocalLoss?\n",
     "  - Reduce regularisation?\n",
     "\n",
