Added architecture with more layers

--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -635,15 +635,12 @@
     "  - Test 1: Train for longer (50 epochs) and increase patience in EarlyStopping (10 to 40) --> RESULTS: val accuracy increased to 0.693 (NEW HIGHEST).\n",
     "  - Test 2: Adding padding to Conv2D layers to preserve spatial dimensions. --> RESULTS: val accuracy decreased a bit to 0.6928 but still good. Increassed a bit Recall and Precision.\n",
     "  - Test 3: Increasing the number of filters in Conv2D layers (64, 128, 256) --> RESULTS: val accuracy increased again to 0.69973 (NEW HIGHEST). Increased Precision, reduced Recall.\n",
-    "  - Test 4: Adding a new dense layer in the classifier with 256 neurons --> RESULTS: ...\n",
-    "  - Introduce FocalLoss?\n",
-    "  - Reduce regularisation?\n",
-    "\n",
-    "---\n",
-    "### Next Steps:\n",
-    "1. **If overfitting**: Increase Dropout rate in Dense layer (0.5 f.i.) and perhaps remove some from Conv2D layers or decrease them.\n",
-    "2. **If improving accuracy**: Experiment with Conv2D filter number and strides. Increase model capacity (more filters, more conv2d layers, more dense layers)\n",
-    "3. **Other tuning**: Activation functions like LeakyReLU. Include FocalLoss to address class imbalance.\n"
+    "  - Test 4: Adding a new dense layer in the classifier with 256 neurons --> RESULTS: val accuracy increased again to 0.7152 (NEW HIGHEST). Increased Recall, similar Precision.\n",
+    "  - Test 5: Introduce an additional Conv2D layer of 512 or 16 filters?\n",
+    "  - Test 6: Introduce FocalLoss to see what happens?\n",
+    "  - Test 7: Reduce slightly dropout or regularisation to see if accuracy improves? Increase dropout in Dense layers?\n",
+    "  - Test 8: Change activation functions to LeakyReLU?\n",
+    "  - Test 9: Erase MaxPooling layers and introduce strides of 2x2 in Conv2D layers?\n"
    ]
   },
   {
@@ -852,19 +849,19 @@
     "    \n",
     "    # --- Feature extraction ---\n",
     "\n",
-    "    Conv2D(32, (3, 3), padding='same'), # Convolution with 32 filters and 3x3 kernel\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    MaxPooling2D((2, 2)),\n",
-    "    Dropout(0.3),\n",
-    "\n",
     "    Conv2D(64, (3, 3), padding='same'), # Convolution with 64 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
     "    Dropout(0.3),\n",
-    "    \n",
+    "\n",
     "    Conv2D(128, (3, 3), padding='same'), # Convolution with 128 filters and 3x3 kernel\n",
+    "    BatchNormalization(),\n",
+    "    Activation('relu'),\n",
+    "    MaxPooling2D((2, 2)),\n",
+    "    Dropout(0.3),\n",
+    "    \n",
+    "    Conv2D(256, (3, 3), padding='same'), # Convolution with 256 filters and 3x3 kernel\n",
     "    BatchNormalization(),\n",
     "    Activation('relu'),\n",
     "    MaxPooling2D((2, 2)),\n",
@@ -872,6 +869,11 @@
     "    \n",
     "    # --- Classification ---\n",
     "    Flatten(),\n",
+    "\n",
+    "    Dense(256), # Fully connected layer with 256 units\n",
+    "    BatchNormalization(),\n",
+    "    Activation('relu'),\n",
+    "    Dropout(0.3),\n",
     "\n",
     "    Dense(128), # Fully connected layer with 128 units\n",
     "    BatchNormalization(),\n",
