--- a/Image_Recognition/CNN/CNN_Model.ipynb
+++ b/Image_Recognition/CNN/CNN_Model.ipynb
@@ -638,7 +638,8 @@
     "  - Test 4: Adding a new dense layer in the classifier with 256 neurons --> RESULTS: val accuracy increased again to 0.7152 (NEW HIGHEST). Increased Recall, similar Precision.\n",
     "  - Test 4_Focal: Introduced Focal Loss but not so much of a change. Less val accuracy, recall and precision but Helipad 100% accuracy f.i.\n",
     "  - Test 4_Dropout: Reduced dropout in Conv layers and increased in Dense layers. --> RESULTS: Starting to underfit.\n",
-    "  - Test 5: Changed MaxPooling layers to strides in Conv2D layers and reduced Dropout in Dense Layers --> RESULTS: Increased val accuracy to 0.7178 (NEW HIGHEST). Reduced 1% recall but increased precision by 3%.\n"
+    "  - Test 5: Changed MaxPooling layers to strides in Conv2D layers and reduced Dropout in Dense Layers --> RESULTS: Increased val accuracy to 0.7178 (NEW HIGHEST). Reduced 1% recall but increased precision by 3%.\n",
+    "  - Test 6: Increase Conv2D layers (16 and 512) and number of epochs (70) --> RESULTS: Increased val accuracy to 0.777 (NEW HIGHEST)."
    ]
   },
   {
