--- a/Image_Recognition/CNN/CNN_Popular_Archs.ipynb
+++ b/Image_Recognition/CNN/CNN_Popular_Archs.ipynb
@@ -176,9 +176,10 @@
     "\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras import Input\n",
-    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.models import Sequential, Model\n",
     "from tensorflow.keras.layers import Dense, Flatten, Activation, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D, RandomFlip, RandomRotation, RandomZoom\n",
     "from tensorflow.keras.optimizers import Adam, AdamW\n",
+    "from tensorflow.keras.applications import InceptionV3\n",
     "from tensorflow.keras.callbacks import TerminateOnNaN, EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n"
    ]
   },
@@ -604,42 +605,13 @@
     "tags": []
    },
    "source": [
-    "## 1 CNN Model\n",
+    "## 1 Training Popular CNN Architectures from Scratch\n",
     "\n",
-    "Taking the best ffNN model as a baseline, we designed and trained a Convolutional Neural Network (CNN) to improve the results.\n",
+    "https://keras.io/api/applications/\n",
     "\n",
-    "**How to Improve the Model?**\n",
-    "- Add **Data Augmentation** techniques to increase the diversity of the training data.\n",
-    "- Include **Dropout Layers** to prevent overfitting and **Batch Normalization** to stabilize and accelerate training.\n",
-    "- Network Architecture: Experiment with different architectures, such as adding more convolutional layers, changing filter sizes, and adjusting the number of neurons in dense layers.\n",
-    "- Hyperparameter Tuning: Optimize learning rate, batch size, number of epochs, and optimizer \n",
-    "\n",
-    "---\n",
-    "### Log of Changes\n",
-    "\n",
-    "- Model 1: Simplification of ffNN architecture to a CNN architecture -> RESULTS: Less training time, better validation accuracy.\n",
-    "  - 1 Conv2D layer (32 filters, 3x3 kernel) followed by a single Softmax Dense layer (1).\n",
-    "  - ReLU activation.\n",
-    "  - Adam optimizer (learning rate: 1e-4).\n",
-    "  - Epochs: 20\n",
-    "  - Batch: 16\n",
-    "- Model 2: FOCUS ON NETWORK ARCHITECTURE\n",
-    "  - Test 1: 3 Conv2D layers (32, 64, 128 filters; 3x3 kernel) followed by a single Softmax Dense layer. -> RESULTS: Even less training time (1h) but slightly worse validation accuracy. Huge Overfitting (0.99 train acc vs 0.60 val acc).\n",
-    "  - Test 2: Lets see what happens when Pooling layers are added after each Conv2D layer. --> RESULTS: Highest validation accuracy (0.64) so far, but still overfitting (0.93 train acc vs 0.64 val acc).\n",
-    "  - Test 3: Lets now try to add more layers in the classifier -> This is a typical CNN architecture like AlexNet --> Results: Slight increase in accuracy (0.6448) but still a huge overftting.\n",
-    "- Model 3: FOCUS ON REDUCING OVERFITTING\n",
-    "  - Test 1: Adding BatchNormalisation layers to Feature extraction phase. --> RESULTS: Validation accuracy has decreased to 0.6 again but now it is overfitting less.\n",
-    "  - Test 2: Addind BatchNorm to Classification phase and adding Dropout layers. --> RESULTS: We have greatly reduced overfitting! (0.8 train vs 0.6 val) but there is room for improvement. We have also increased val accuracy to 0.67 (NEW HIGHEST).\n",
-    "  - Test 3: Adding DataAugmentation and L2 Regularisation with AdamW optimiser to reduce the variance. --> RESULTS: WE HAVE COMPLETELY REDUCED OVERFITTING (look at loss graph) but val accuracy has dropped to 0.6.\n",
-    "- Model 4: FOCUS ON INCREASING ACCURACY\n",
-    "  - Test 1: Train for longer (50 epochs) and increase patience in EarlyStopping (10 to 40) --> RESULTS: val accuracy increased to 0.693 (NEW HIGHEST).\n",
-    "  - Test 2: Adding padding to Conv2D layers to preserve spatial dimensions. --> RESULTS: val accuracy decreased a bit to 0.6928 but still good. Increassed a bit Recall and Precision.\n",
-    "  - Test 3: Increasing the number of filters in Conv2D layers (64, 128, 256) --> RESULTS: val accuracy increased again to 0.69973 (NEW HIGHEST). Increased Precision, reduced Recall.\n",
-    "  - Test 4: Adding a new dense layer in the classifier with 256 neurons --> RESULTS: val accuracy increased again to 0.7152 (NEW HIGHEST). Increased Recall, similar Precision.\n",
-    "  - Test 4_Focal: Introduced Focal Loss but not so much of a change. Less val accuracy, recall and precision but Helipad 100% accuracy f.i.\n",
-    "  - Test 4_Dropout: Reduced dropout in Conv layers and increased in Dense layers. --> RESULTS: Starting to underfit.\n",
-    "  - Test 5: Changed MaxPooling layers to strides in Conv2D layers and reduced Dropout in Dense Layers --> RESULTS: Increased val accuracy to 0.7178 (NEW HIGHEST). Reduced 1% recall but increased precision by 3%.\n",
-    "  - Test 6: Increase Conv2D layers (16 and 512) and number of epochs (70) --> RESULTS: Increased val accuracy to 0.777 (NEW HIGHEST)."
+    "- Training ResNet50 (exploring Residual Connections)\n",
+    "- Training InceptionV3 (exploring Inception Modules)\n",
+    "- Training EfficientNetB0 (exploring Few-Parameters Architectures)"
    ]
   },
   {
@@ -696,6 +668,14 @@
     "                                stratify=[obj.category for ann in anns_dataset for obj in ann.objects])\n",
     "print('Number of training images: ' + str(len(train2)))\n",
     "print('Number of validation images: ' + str(len(val2)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494b3ebe",
+   "metadata": {},
+   "source": [
+    "- **InceptionV3**"
    ]
   },
   {
@@ -828,62 +808,33 @@
     }
    ],
    "source": [
+    "# https://keras.io/api/applications/#usage-examples-for-image-classification-models\n",
     "print('Compiling the model...')\n",
     "\n",
+    "# Setting the Input\n",
+    "inputs = Input(shape=(224, 224, 3))\n",
+    "x = Rescaling(1./255)(inputs)\n",
     "\n",
-    "# Conv2D(filters, kernel_size, strides=(1, 1), padding='valid', data_format=None, dilation_rate=(1, 1), \n",
-    "# groups=1, activation=None, use_bias=True, kernel_initializer='glorot_uniform', bias_initializer='zeros', \n",
-    "# kernel_regularizer=None, bias_regularizer=None, activity_regularizer=None, kernel_constraint=None, bias_constraint=None, **kwargs)\n",
+    "# Loading the InceptionV3 base model...\n",
+    "base_model = InceptionV3(input_tensor = x, # Changing Input as InceptionV3 native input is 299x299x3 \n",
+    "                         weights = None, # WEIGHTS SET TO NONE TO TRAIN INCEPTIONV3 FROM SCRATCH!!\n",
+    "                         include_top = False) # Changing 1000-classes output to only 13!\n",
     "\n",
-    "model = Sequential([\n",
-    "    Input(shape=(224, 224, 3)), # 224x224 images with 3 channels (RGB)\n",
-    "    \n",
-    "    # --- Data Augmentation Layers ---\n",
-    "    RandomFlip(\"horizontal\"),\n",
-    "    RandomRotation(0.1),  # Randomly rotate by up to 10% (36 degrees)\n",
-    "    RandomZoom(0.1),      # Randomly zoom by up to 10%\n",
-    "    # --------------------------------\n",
+    "# Adding custom classifier head\n",
+    "x = base_model.output\n",
+    "x = Flatten()(x) # Could change it to GlobalAveragePooling2D\n",
+    "x = Dense(256, activation='relu')(x) # Could change the number of neurons, add BatchNorm or Dropout, weigths_initialiser, ...\n",
+    "predictions = Dense(13, activation='softmax')(x)\n",
     "\n",
-    "    Rescaling(1./255), # Rescale pixel values to [0, 1]\n",
-    "    \n",
-    "    # --- Feature extraction ---\n",
-    "\n",
-    "    Conv2D(64, (3, 3), padding='same', strides=(2, 2)), # Convolution with 64 filters and 3x3 kernel\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    Dropout(0.2),\n",
-    "\n",
-    "    Conv2D(128, (3, 3), padding='same', strides=(2, 2)), # Convolution with 128 filters and 3x3 kernel\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    Dropout(0.2),\n",
-    "    \n",
-    "    Conv2D(256, (3, 3), padding='same', strides=(2, 2)), # Convolution with 256 filters and 3x3 kernel\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    Dropout(0.2),\n",
-    "    \n",
-    "    # --- Classification ---\n",
-    "    Flatten(),\n",
-    "\n",
-    "    Dense(256), # Fully connected layer with 256 units\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    Dropout(0.3),\n",
-    "\n",
-    "    Dense(128), # Fully connected layer with 128 units\n",
-    "    BatchNormalization(),\n",
-    "    Activation('relu'),\n",
-    "    Dropout(0.3),\n",
-    "\n",
-    "    Dense(NUM_CATEGORIES, activation='softmax') # Output layer with softmax activation\n",
-    "])\n",
-    "\n",
+    "# Final model\n",
+    "model = Model(inputs=inputs, outputs=predictions)\n",
     "model.summary()\n",
     "\n",
     "\n",
     "opt =  AdamW(learning_rate=1e-4, weight_decay=1e-5)\n",
-    "model.compile(optimizer=opt, loss='categorical_crossentropy', metrics=['accuracy'])"
+    "model.compile(optimizer=opt, \n",
+    "              loss='categorical_crossentropy', \n",
+    "              metrics=['accuracy'])"
    ]
   },
   {
@@ -909,7 +860,7 @@
    "outputs": [],
    "source": [
     "# Callbacks\n",
-    "MODEL_NAME = 'CNN_model.keras'\n",
+    "MODEL_NAME = 'CNN_InceptionV3.keras'\n",
     "\n",
     "model_checkpoint = ModelCheckpoint(MODEL_NAME, monitor='val_accuracy', verbose=1, save_best_only=True)\n",
     "reduce_lr = ReduceLROnPlateau(monitor='val_accuracy', factor=0.1, patience=10, verbose=1)\n",
@@ -1298,7 +1249,7 @@
    "source": [
     "print('Training model...')\n",
     "\n",
-    "EPOCHS = 50\n",
+    "EPOCHS = 70\n",
     "train_steps = math.ceil(len(objs_train)/BATCH_SIZE)\n",
     "valid_steps = math.ceil(len(objs_valid)/BATCH_SIZE)\n",
     "\n",
