Added results of InceptionV3 from scratch

--- a/Image_Recognition/CNN/CNN_Popular_Archs.ipynb
+++ b/Image_Recognition/CNN/CNN_Popular_Archs.ipynb
@@ -177,10 +177,10 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import Input\n",
     "from tensorflow.keras.models import Sequential, Model\n",
-    "from tensorflow.keras.layers import Dense, Flatten, Activation, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D, RandomFlip, RandomRotation, RandomZoom\n",
+    "from tensorflow.keras.layers import Dense, Flatten, Activation, Rescaling, BatchNormalization, Dropout, LeakyReLU, Conv2D, MaxPooling2D, RandomFlip, RandomRotation, RandomZoom, GlobalAveragePooling2D\n",
     "from tensorflow.keras.optimizers import Adam, AdamW\n",
     "from tensorflow.keras.applications import InceptionV3\n",
-    "from tensorflow.keras.callbacks import TerminateOnNaN, EarlyStopping, ReduceLROnPlateau, ModelCheckpoint\n"
+    "from tensorflow.keras.callbacks import TerminateOnNaN, EarlyStopping, ReduceLROnPlateau, ModelCheckpoint"
    ]
   },
   {
@@ -811,9 +811,14 @@
     "# https://keras.io/api/applications/#usage-examples-for-image-classification-models\n",
     "print('Compiling the model...')\n",
     "\n",
-    "# Setting the Input\n",
+    "# 1. Setting the Input\n",
     "inputs = Input(shape=(224, 224, 3))\n",
-    "x = Rescaling(1./255)(inputs)\n",
+    "# 2. Add Data Augmentation Layers\n",
+    "x = RandomFlip(\"horizontal\")(inputs)\n",
+    "x = RandomRotation(0.1)(x)\n",
+    "x = RandomZoom(0.1)(x)\n",
+    "# 3. Add Rescaling layer\n",
+    "x = Rescaling(1./255)(x)\n",
     "\n",
     "# Loading the InceptionV3 base model...\n",
     "base_model = InceptionV3(input_tensor = x, # Changing Input as InceptionV3 native input is 299x299x3 \n",
@@ -822,16 +827,18 @@
     "\n",
     "# Adding custom classifier head\n",
     "x = base_model.output\n",
-    "x = Flatten()(x) # Could change it to GlobalAveragePooling2D\n",
-    "x = Dense(256, activation='relu')(x) # Could change the number of neurons, add BatchNorm or Dropout, weigths_initialiser, ...\n",
-    "predictions = Dense(13, activation='softmax')(x)\n",
+    "x = GlobalAveragePooling2D()(x)\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "predictions = Dense(NUM_CATEGORIES, activation='softmax')(x)\n",
     "\n",
     "# Final model\n",
     "model = Model(inputs=inputs, outputs=predictions)\n",
     "model.summary()\n",
     "\n",
     "\n",
-    "opt =  AdamW(learning_rate=1e-4, weight_decay=1e-5)\n",
+    "opt =  AdamW(learning_rate=1e-4, weight_decay=1e-4)\n",
     "model.compile(optimizer=opt, \n",
     "              loss='categorical_crossentropy', \n",
     "              metrics=['accuracy'])"
@@ -871,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "77f1674b",
    "metadata": {
     "execution": {
@@ -896,7 +903,7 @@
     "objs_valid = [(ann.filename, obj) for ann in val2 for obj in ann.objects]\n",
     "\n",
     "# Generators\n",
-    "BATCH_SIZE = 16\n",
+    "BATCH_SIZE = 32\n",
     "train_generator = generator_images(objs_train, BATCH_SIZE, do_shuffle=True)\n",
     "valid_generator = generator_images(objs_valid, BATCH_SIZE, do_shuffle=False)"
    ]
@@ -1249,7 +1256,7 @@
    "source": [
     "print('Training model...')\n",
     "\n",
-    "EPOCHS = 70\n",
+    "EPOCHS = 50\n",
     "train_steps = math.ceil(len(objs_train)/BATCH_SIZE)\n",
     "valid_steps = math.ceil(len(objs_valid)/BATCH_SIZE)\n",
     "\n",
@@ -1265,25 +1272,6 @@
     "best_idx = int(np.argmax(h1.history['val_accuracy']))\n",
     "best_value = np.max(h1.history['val_accuracy'])\n",
     "print('Best validation model: epoch ' + str(best_idx+1), ' - val_accuracy ' + str(best_value))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "412115a0",
-   "metadata": {
-    "papermill": {
-     "duration": 1.909093,
-     "end_time": "2025-10-15T10:47:16.010294",
-     "exception": false,
-     "start_time": "2025-10-15T10:47:14.101201",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "- Training time: ~1h\n",
-    "- GPU: KAGGLE T4\n",
-    "- Best validation model: Epoch 17 - Validation accuracy: 0.6011"
    ]
   },
   {
