Added new model v2

--- a/Image_Recognition/CNN/CNN_Popular_Archs_Transfer_Learning.ipynb
+++ b/Image_Recognition/CNN/CNN_Popular_Archs_Transfer_Learning.ipynb
@@ -837,6 +837,9 @@
     "\n",
     "# 6. Adding custom classifier head\n",
     "x = GlobalAveragePooling2D()(x)\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Dropout(0.5)(x)\n",
     "outputs = Dense(NUM_CATEGORIES, activation='softmax')(x)\n",
     "\n",
     "# 7. Final model\n",
